--- a/package.json
+++ b/package.json
@@ -11,16 +11,21 @@
   },
   "dependencies": {
     "@react-pdf/renderer": "^3.1.7",
+    "html2canvas": "^1.4.1",
+    "html2pdf.js": "^0.10.1",
+    "jspdf": "^2.5.1",
     "localforage": "^1.10.0",
     "match-sorter": "^6.3.1",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
+    "react-pdf": "^6.2.2",
     "react-router-dom": "^6.8.2",
     "sort-by": "^1.2.0"
   },
   "devDependencies": {
     "@types/react": "^18.0.27",
     "@types/react-dom": "^18.0.10",
+    "@types/react-pdf": "^6.2.0",
     "@vitejs/plugin-react": "^3.1.0",
     "sass": "^1.58.3",
     "typescript": "^4.9.3",
